[package]
name = "rename-gru"
version = "0.9.1"
edition = "2021"
keywords = ["rename-utility", "cli", "rename", "batch", "command"]
categories = ["command-line-utilities", "cli"]
license = "MIT"
description = "A CLI tool to batch rename files in the provided directory"
readme = "readme.md"
repository = "https://github.com/G1ya777/GRU"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
file-id = "0.2"
rand = "0.8"
renamore = "0.3"
serde_json = "1.0"
crc32fast = "1.4"
any_ascii = "0.3"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
